@@ -26,14 +26,14 @@
                 <div class="card blue-grey lighten-4" style="height: 90%;">
                         <div class="card-content black-text">
                                 <span class="card-title" id="changelogTitle"></span>
-                                <p id="changelogContent"></p>
+                                <div id="changelogContent"> </div>
                         </div>
                 </div>
         </div>
 
         <table style="width:100%; height:95%; margin: 0px">
                 <tr>
-                        <th style ="border: 1px solid black; width:10%">
+                        <th style ="width:10%">
                                 <h3>Set the Map Center:</h3>
                                 <table>
                                 <tr>
@@ -51,7 +51,7 @@
                                 </table>
                                 <button type="button" id="addPointButton">Add</button>
                         </th>
-                        <th style ="border: 1px solid black">
+                        <th>
                                 <div id="map" class="map"></div>
                         </th>
                 </tr>
